src/test/deca/context/valid/intermediaire2/arithmetiques/03while.deca
// Description:
//    Programme minimaliste réalisant une comparaison dans un while entre une variable et le résultat d'une addition, et le résultat d'une soustraction.
//
// Resultats:
//    03while.lis
//
// Historique:
//    cree le 08/06/2022

{
    int x = 0;
    while (x < 1 + 1) {
    }
    
    while (x < 1 - 1) {
    }
}