src/test/deca/context/invalid/intermediaire2/arithmetiques/02typeErrorPlus.deca
// Description:
//    Programme minimaliste assignant le résultat d'une soustraction (int, float) à une variable int -> erreur de typage
//
// Resultats:
//    02typeErrorPlus.lis
//
// Historique:
//    cree le 09/06/2022

{
    int a = 1;
    int c = 0.5 - a;
}